--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/animate.css">
     <link rel="stylesheet" href="./css/sample_company_01.css">
+    <link rel="stylesheet" href="./css/rwdindex.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--라이브러리 CSS CSS는 남이 만든게 먼저 나와야 한다
@@ -37,7 +38,11 @@
     <div id="header">
         <!-- <div class="inner"></div> -->
         <div class="row cf">
-            <h1><a href="#"><img src="./img/워드프레스 기업홈페이지1 로고.png" alt="company"></a></h1>
+            <h1><a href="#"><span class="blind">company</span></a></h1>
+            <div class="menuopen">
+                <span class="blind">메뉴열기</span>
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <div id="nav">
                 <ul class="depth1">
                     <li><a href="#">회사소개</a>
